--- a/header.html
+++ b/header.html
@@ -9,13 +9,12 @@
 <body>
     <header>
         <div class="logo"> 
-            <img src="6sfog.webp" alt="" style="width:100px;height:100px;">
-        <div>
-
+            <img src="6sfog.webp" alt="">
+        </div>
         <div class="odkaz">
             <a href="#">Home</a>
             <a href="#">Login</a>
-            <a href="#">KYS</a>
+            <a href="#">Register</a>
         </div>
     </header>
 </body>
